2009-12-18  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceMetadataExtension.cs : added a couple of FIXME comments.

2009-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientCredentials.cs : more SL3 changes.

2009-11-25  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientCredentials.cs : it is part of SL3 API, so adjusted for it.

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceMetadataExtension.cs : channelDispatchers is keyed by URL,
	  so it might have been skipped when the URLs are the same for wsdl
	  and help. So, differentiate flags for mex and help, not to be
	  exclusive. This fixes random-ish EndpointNotFound for WSDLs.

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceMetadataExtension.cs : A few fixes for no-wsdl case: fix
	  wrong html template, and do not throw NRE for the lack of WsdlUrl.

2009-10-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceMetadataExtension.cs : restructure internal channel property
	  so that http channels can cope with it.

2009-10-16  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceMetadataExtension.cs : Handle all predefined mex bindings.
	  Use DispatcherBuilder directly. Add mex listener property to
	  distinguish the listener from http channel listeners later.

2009-10-15  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceMetadataExtension.cs : when serviceDebug and serviceMetadata
	  shares the same URL, both of them must be set, not being skipped.

2009-10-15  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDebugBehavior.cs, ServiceMetadataBehavior.cs,
	  ServiceMetadataExtension.cs : Now HelpPage is differentiated from
	  wsdl page. The help page now outputs correct URL (for WSDL).

2009-10-15  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDebugBehavior.cs, ServiceMetadataBehavior.cs,
	  ServiceMetadataExtension.cs : reduce extra args, static isn't
	  required here. Add FIXME comments.

2009-10-15  Atsushi Enomoto  <atsushi@ximian.com>
